2004-04-20  Sam Steingold  <sds@gnu.org>

	* path.tst: added tests for non-wild pathnames returned by
	DIRECTORY, correct :VERSION after MERGE-PATHNAMES &c

2004-04-19  Sam Steingold  <sds@gnu.org>

	* path.tst, excepsit.tst: added tests for
	pathname.d:simplify_directory()

2004-04-19  Sam Steingold  <sds@gnu.org>

	* strings.tst: add a (NSTRING-UPCASE #A(NIL (0))) test
	enable string un-realloc test (was risky)

2004-04-10  Bruno Haible  <bruno@clisp.org>

	* strings.tst: Add test for return value of NSTRING-UPCASE.

2004-04-16  Sam Steingold  <sds@gnu.org>

	* iofkts.tst: (WRITE-STRING #A(nil (0))) must return
	its argument, not NIL

2004-04-16  Sam Steingold  <sds@gnu.org>

	* iofkts.tst (object-out): replaced with a PRINT-OBJECT method;
	added a "risky test" of printing a list of objects

2004-04-16  Sam Steingold  <sds@gnu.org>

	* number2.tst: check that transcendental functions keep the type
	of the float argument (based on GCL ansi-tests)

2004-04-16  Sam Steingold  <sds@gnu.org>

	* streams.tst: test ext:fill-stream

2004-04-10  Bruno Haible  <bruno@clisp.org>

	* streams.tst: Update after sys::describe-stream was renamed to
	sys::fill-stream.

2004-04-03  Bruno Haible  <bruno@clisp.org>

	* type.tst: Many new SUBTYPEP tests.

2004-04-04  Bruno Haible  <bruno@clisp.org>

	* type.tst: Test TYPEP on a structure with user-defined :TYPE.

2004-04-04  Bruno Haible  <bruno@clisp.org>

	* type.tst: Test DEFSTRUCT :INITIAL-OFFSET option.

2004-03-21  Bruno Haible  <bruno@clisp.org>

	* clos.tst: Verify that SUBTYPEP works on not-yet-finalized classes.

2004-03-21  Bruno Haible  <bruno@clisp.org>

	* clos.tst: Verify that redefining a class doesn't change its identity.

2004-04-01  Bruno Haible  <bruno@clisp.org>

	* iofkts.tst (*print-readably*): Fix symbol printing test again.

2004-03-27  Bruno Haible  <bruno@clisp.org>

	* array.tst: array-total-size-limit and array-dimension-limit are
	now = most-positive-fixnum.

2004-03-23  Sam Steingold  <sds@gnu.org>
