@@ -1,3 +1,11 @@
+2004-04-12  Bruno Haible  <bruno@clisp.org>
+
+	* tests.lisp (with-ignored-errors): Use portable definition instead of
+	the old CLISP hammer definition.
+	* clos.tst: Remove hack.
+
+	* number2.tst: Remove *break-on-warnings* setting.
+
 2004-04-20  Sam Steingold  <sds@gnu.org>
 
 	* path.tst: added tests for non-wild pathnames returned by
